# tgaer

./: .gitignore  .gitmodules  AUTOREFINE_HERMES_BRIDGE.md  README.md  mise.toml  pyproject.toml
.github/workflows/: lint.yml
configs/experiments/: arc_agi3_empirical.yaml  arc_agi3_guarded.yaml  arc_agi3_llm.yaml  arc_agi3_planner.yaml  arc_agi3_qwen36.yaml  arc_agi3_qwen3vl.yaml  arc_agi3_qwen3vl_30b.yaml  arc_agi3_scientist.yaml  arc_hybrid.yaml  arc_poetiq.yaml  orak_geq_opt.yaml
docs/experiments/: 2026-06-23-explorer-phase1-vs-phase2.md  2026-06-24-explorer-phase3b-live-roster.md  2026-06-25-explorer-phase4-live-roster.md  2026-06-26-explorer-phase5-ls20-induction-telemetry.md  2026-06-26-explorer-phase6-affordance-cycle-fix.md  2026-06-30-explorer-phase7-position-memory-cycle-break.md
docs/plans/: 2026-06-18-arc-agi3-vl-scientist.md  2026-06-22-arc-agi3-click-verb.md  2026-06-25-ls20-induction-telemetry-replay.md
docs/specs/: 2026-06-14-arc-agi3-rl-design.md  2026-06-18-arc-agi3-scientist-design.md  2026-06-19-arc-agi3-empirical-semantics-design.md  2026-06-22-arc-agi3-click-verb-design.md  2026-06-23-arc-agi3-explorer-design.md  2026-06-25-ls20-induction-telemetry-replay-design.md
docs/superpowers/plans/: 2026-06-19-arc-agi3-empirical-semantics.md
environments/arc_agi_3_env/: VENDORED.md  shaped_reward.py  train_grpo.py
environments/arc_agi_3_env/evals/: grpo_complex_maze_result.txt  variance_check.py
experiments/: audit_reasoning.py  capture_ls20.py  probe_click_mechanic.py  replay_telemetry.py  roster_results.jsonl  roster_results_empirical.jsonl  roster_results_explorer.jsonl  roster_results_explorer_phase1.jsonl  roster_results_explorer_phase3b.jsonl  runner.py  sweep_roster.py  sweep_roster_empirical.py
src/tgaer/: __init__.py
src/tgaer/agents/: arc_agi3_empirical.py  arc_agi3_explorer.py  arc_agi3_grid.py  arc_agi3_llm.py  arc_agi3_planner.py  arc_agi3_random.py  arc_agi3_recorder.py  arc_agi3_scientist.py  arc_agi3_semantics.py  hybrid_agent.py  llm_agent.py  memory.py  planning_agent.py  poetiq_agent.py
src/tgaer/cli/: evaluate.py  main.py
src/tgaer/core/: agent_base.py  env_base.py
src/tgaer/envs/arc/: arc_dataset.py  arc_env.py
src/tgaer/envs/arc_agi3/: arc_agi3_api.py  arc_agi3_client.py  arc_agi3_env.py  rendering.py  shaping.py
src/tgaer/envs/orak/: orak_api.py  orak_env.py
src/tgaer/evaluation/: arc_agi3_eval.py  arc_eval.py  dispatch.py  metrics.py  orak_eval.py  wandb_logger.py
src/tgaer/guards/: __init__.py  base.py  guarded_agent.py  trajectory_guards.py
src/tgaer/logging/: langsmith_utils.py  mlflow_utils.py
src/tgaer/optimization/: dspy_signatures.py  geq_loop.py
src/tgaer/optimization/autorefine/: __init__.py  dpo_generator.py
tests/: test_arc_agi3_client.py  test_arc_agi3_empirical.py  test_arc_agi3_env.py  test_arc_agi3_eval.py  test_arc_agi3_explorer.py  test_arc_agi3_grid.py  test_arc_agi3_llm.py  test_arc_agi3_planner.py  test_arc_agi3_replay.py  test_arc_agi3_scientist.py  test_eval_dispatch.py  test_guards.py  test_rendering.py  test_shaping.py  test_wandb_logger.py
