[project]
name = "tgaer"
version = "0.1.0"
description = "Toward General-Purpose Abstraction & Embodied Reasoning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Charlene Leong" }]

dependencies = [
  ## Modelling
  "numpy>=2.2.6", # https://numpy.org/doc/stable/release.html
  "pandas>=2.2.3", # https://github.com/pandas-dev/pandas/releases
  "tqdm>=4.67.1", # https://github.com/tqdm/tqdm/releases
  "PyYAML>=6.0.2", # https://github.com/yaml/pyyaml/releases
  "typer>=0.12.3", # https://github.com/tiangolo/typer/releases
  "rich", # https://github.com/Textualize/rich/releases
  "dspy-ai", # https://github.com/stanfordnlp/dspy/releases/
  "mlflow",
  "langsmith",
  "autoresearch @ git+https://github.com/charleneleong-ai/autoresearch.git@v0.26.2", # https://github.com/charleneleong-ai/autoresearch/releases
  "matplotlib>=3.8", # required by autoresearch.render
  "requests>=2.31", # ARC-AGI-3 hosted API transport (three.arcprize.org)
]

[project.scripts]
tgaer-eval = "tgaer.cli.evaluate:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "isort"]
dashboards = ["streamlit"]
poetiq = [
  "litellm==1.78.2",
  "asynciolimiter==1.2.0",
  "python-dotenv==1.1.1",
  "scipy==1.16.3",
]

[tool.setuptools.packages.find]
where = ["src"]
