[project]
name = "tgaer"
version = "0.1.0"
description = "Toward General-Purpose Abstraction & Embodied Reasoning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Charlene Leong" }]

dependencies = [
  ## Modelling
  "numpy>=2.2.6", # https://numpy.org/doc/stable/release.html
  "pandas>=2.2.3", # https://github.com/pandas-dev/pandas/releases
  "tqdm>=4.67.1", # https://github.com/tqdm/tqdm/releases
  "PyYAML>=6.0.2", # https://github.com/yaml/pyyaml/releases
  "typer>=0.12.3", # https://github.com/tiangolo/typer/releases
  "rich", # https://github.com/Textualize/rich/releases
  "dspy-ai", # https://github.com/stanfordnlp/dspy/releases/
  "mlflow",
  "langsmith",
  "autoresearch @ git+https://github.com/charleneleong-ai/autoresearch.git@v0.26.2", # https://github.com/charleneleong-ai/autoresearch/releases
  "matplotlib>=3.8", # required by autoresearch.render
  "requests>=2.31", # ARC-AGI-3 hosted API transport (three.arcprize.org)
  "python-dotenv>=1.0", # tgaer-eval loads .env (ARC_API_KEY) on startup
  "litellm>=1.78", # ArcAgi3LLMAgent backend (Gemini / local vLLM via one client)
  "wandb>=0.27", # ARC-AGI-3 eval metric + frame-image logging
  "pillow>=10", # render the board to PNG for the vision agent + wandb images
]

[project.scripts]
tgaer-eval = "tgaer.cli.evaluate:main"

[project.optional-dependencies]
dev = ["pytest", "ruff==0.15.13"]
dashboards = ["streamlit"]
poetiq = [
  "litellm==1.78.2",
  "asynciolimiter==1.2.0",
  "python-dotenv==1.1.1",
  "scipy==1.16.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
# Vendored env + git submodules + loose research/runtime artefacts are not ours to lint.
extend-exclude = ["challenges", "environments", "experiments", "wandb", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # pyflakes, pycodestyle, warnings, isort (ruff owns import order + format)
ignore = ["E501"]  # line length is owned by `ruff format`; it won't wrap strings/comments/URLs
